--- a/StringSimilarityDemo/StringSimilarityDemo.csproj
+++ b/StringSimilarityDemo/StringSimilarityDemo.csproj
@@ -116,8 +116,8 @@
     <Compile Include="PRH\PrhCompanyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringSimilarity\CompanyInfoSimilarityService.cs" />
-    <Compile Include="StringSimilarity\StringSimilarityCompanyInfo.cs" />
+    <Compile Include="StringSimilarity\ObjectSimilarityService.cs" />
+    <Compile Include="StringSimilarity\StringSimilarityObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
